--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,8 @@ jobs:
     strategy:
       matrix:
         julia-version:
-          - "1.10"
-          - "1.11"
+          - "lts"
+          - "1"
         os:
           - "ubuntu-latest"
           - "windows-latest"
