--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -5,6 +5,7 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterCitations = "daee34ce-89f3-4625-b898-19384cb65244"
 DocumenterVitepress = "4710194d-e776-4893-9690-8d956a29c365"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 UncertaintyQuantification = "7183a548-a887-11e9-15ce-a56ab60bad7a"
 
@@ -12,3 +13,4 @@ UncertaintyQuantification = "7183a548-a887-11e9-15ce-a56ab60bad7a"
 Documenter = "1.14.1"
 DocumenterCitations = "1.4.1"
 DocumenterVitepress = "0.2.6"
+Optim = "1.13.2"
