--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         os:
           - "ubuntu-latest"
           - "windows-latest"
-          - "macos-13"
+          - "macos-latest"
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
