--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,7 @@
 name = "UncertaintyQuantification"
 uuid = "7183a548-a887-11e9-15ce-a56ab60bad7a"
-authors = [
-    "Jasper Behrensdorf <behrensdorf@irz.uni-hannover.de>",
-    "Ander Gray <ander.gray@ukaea.uk>",
-]
 version = "0.13.0"
+authors = ["Jasper Behrensdorf <behrensdorf@irz.uni-hannover.de>", "Ander Gray <ander.gray@ukaea.uk>"]
 
 [deps]
 Bootstrap = "e28b5b4c-05e8-5b66-bc03-6f0c0a0a06e0"
@@ -13,6 +10,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
+DifferentiationInterface = "a0c0ee7d-e4b9-4e03-894e-1c5f64a51d63"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
@@ -21,6 +19,7 @@ Format = "1fa38f19-a742-5d3f-a2b9-30dd87b9d5f8"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MeshAdaptiveDirectSearch = "f4d74008-4565-11e9-04bd-4fe404e6a92a"
 Monomials = "272bfe72-f66c-432f-a94d-600f29493792"
+Mooncake = "da2b9cff-9c12-43a0-ae48-6db2b0edb7d6"
 Mustache = "ffc61752-8dc7-55ee-8c37-f3e9cdd09e70"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
@@ -31,6 +30,7 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+TransportMaps = "6fd49bf0-03ac-4dd1-b9b3-42e511274d6e"
 
 [compat]
 Bootstrap = "2.2"
@@ -38,12 +38,14 @@ CovarianceEstimation = "0.2"
 DataFrames = "0.22, 1.0"
 DelimitedFiles = "1"
 Dierckx = "0.5"
+DifferentiationInterface = "0.7.4"
 Distributions = "0.24, 0.25"
 FastGaussQuadrature = "0.4, 0.5, 1"
 FiniteDifferences = "0.12"
 Format = "1.3"
 MeshAdaptiveDirectSearch = "0.1.0"
 Monomials = "1.0"
+Mooncake = "0.4.196"
 Mustache = "1.0"
 Optim = "1.9.4, 2.0"
 Primes = "0.5"
@@ -53,4 +55,5 @@ Reexport = "0.2, 1.0"
 Roots = "2.2.2"
 Statistics = "1"
 StatsBase = "0.33, 0.34"
+TransportMaps = "1.0.0"
 julia = "1.10"
