--- a/.github/workflows/CompatHelper.yml
+++ b/.github/workflows/CompatHelper.yml
@@ -3,8 +3,8 @@ on:
   schedule:
     - cron: 0 0 * * *
   workflow_dispatch:
-permissions:
-  contents: write
+    permissions:
+      contents: write
   pull-requests: write
 jobs:
   CompatHelper:
@@ -41,4 +41,4 @@ jobs:
         shell: julia --color=yes {0}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          COMPATHELPER_PRIV: ${{ secrets.COMPATHELPER_PRIV }}
+          COMPATHELPER_PRIV: ${{ secrets.DOCUMENTER_KEY }}
