--- a/.github/workflows/DocumentationPreview.yml
+++ b/.github/workflows/DocumentationPreview.yml
@@ -19,8 +19,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: julia-actions/setup-julia@v2
         with:
-          version: "1.11"
+          version: "1"
       - name: Build and deploy
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
         run: ./scripts/buildVitePressDocs.sh
