--- a/.github/workflows/DocumentationPreview.yml
+++ b/.github/workflows/DocumentationPreview.yml
@@ -7,6 +7,10 @@ on:
 
 jobs:
   build:
+    permissions:
+      contents: write
+      pull-requests: read
+      statuses: write
     runs-on: ubuntu-latest
     environment:
       name: pr-${{github.event.number}}
@@ -15,7 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: julia-actions/setup-julia@v2
         with:
-          version: "1.11"
+          version: "1"
       - name: Build and deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
